<?xml version="1.0"?>
<package format="2">
  <name>gridBenchmark</name>
  <version>0.1.0</version>
  <description>The grid benchmark package</description>

  <maintainer email="mfaria@todo.todo">mfaria</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>

</package>
